# cs2-battle-bot

./: .env.example  .gitignore  .readthedocs.yml  Dockerfile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  utils.py
.github/workflows/: deploy.yml  docker-api.yml  docker-bot.yml  docker.yml  generate-schema.yml
api/: Dockerfile  openapi.json  pyproject.toml
api/scripts/: generate-client.sh  upgrade.sh
api/src/: manage.py  openapi.json
api/src/accounts/: admin.py  auth.py  models.py  schemas.py  serializers.py  urls.py  views.py
api/src/accounts/migrations/: 0001_initial.py  0002_alter_user_id.py
api/src/accounts/templates/accounts/: success.html
api/src/accounts/tests/: test_views.py
api/src/api/: urls.py
api/src/cs2_battle_bot/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
api/src/cs2_battle_bot/tests/: conftest.py
api/src/guilds/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
api/src/guilds/migrations/: 0001_initial.py  0002_guild_lobby_channel_guild_team1_channel_and_more.py  0003_guild_members.py  0004_remove_guild_members.py  0005_embed_embedfield_guild_embed_embed_fields.py  0006_embedfield_order.py
api/src/guilds/tests/: conftest.py  test_models.py  test_views.py
api/src/matches/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
api/src/matches/fixtures/: map_pools.json  maps.json  match_configs.json
api/src/matches/migrations/: 0001_initial.py  0002_remove_match_map_remove_match_players_and_more.py  0003_map_remove_matchteam_match_remove_matchteam_team_and_more.py  0004_alter_match_id.py  0005_alter_match_id.py  0006_alter_match_status_matchmapban_match_map_bans.py  0007_matchmapselected_match_map_selected.py  0008_alter_match_map_selected.py  0009_remove_match_map_selected_match_map_picks.py  0010_match_message_id.py  0011_alter_match_message_id.py  0012_alter_match_message_id.py  0013_match_author_id.py  0014_match_clinch_series_match_cvars_match_map_sides_and_more.py  0015_rename_matchmapban_mapban_and_more.py  0016_match_server.py  0017_remove_match_author_id_match_author.py  0018_match_guild.py  0019_match_last_map_ban_match_last_map_pick.py  0020_remove_match_clinch_series_remove_match_map_sides_and_more.py  0021_map_guild_alter_map_name_alter_map_tag.py  0022_alter_map_guild_alter_mappool_guild_and_more.py  0023_alter_mappick_map_alter_match_author_and_more.py  0024_remove_match_map_pool_matchconfig_map_pool.py  0025_matchconfig_shuffle_teams_alter_match_status.py  0026_match_embed.py  0027_alter_match_status.py  0028_alter_match_last_map_ban_alter_match_last_map_pick.py
api/src/matches/tests/: conftest.py  test_maps_models.py  test_maps_views.py  test_matches_models.py  test_matches_views.py
api/src/players/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
api/src/players/fixtures/: players.json
api/src/players/migrations/: 0001_initial.py  0002_steamuser_avatar_steamuser_profile_url_and_more.py  0003_team.py  0004_alter_team_leader.py  0005_alter_player_steam_user.py  0006_alter_team_leader.py
api/src/players/tests/: conftest.py  test_discord_users_models.py  test_discord_users_views.py  test_players_models.py  test_players_views.py  test_steam_users_models.py  test_steam_users_views.py  test_teams_models.py  test_teams_views.py
api/src/servers/: admin.py  models.py  serializers.py  urls.py  views.py
api/src/servers/migrations/: 0001_initial.py  0002_alter_server_matches.py  0003_server_guild_server_is_public_server_password.py  0004_remove_server_matches.py  0005_alter_server_guild_alter_server_rcon_password.py  0006_remove_server_max_players.py
api/src/servers/tests/: conftest.py  test_models.py  test_views.py
bot/: Dockerfile  __main__.py  api.py  bot.py  i18n.py  pyproject.toml  schemas.py  settings.py
bot/cogs/: match.py  utils.py  views.py
bot/events/: __init__.py  events.py  going_live.py  listener.py
bot/locales/: en.json  pl.json
bot/src/: __main__.py  i18n.py  logger.py  schemas.py
bot/src/cogs/: match.py  utils.py  views.py
bot/src/events/: listener.py
bot/src/locales/: en.json
cogs/: match.py
cs2-battle-bot/: .env.example
examples/coolify/: .env.example  Dockerfile  docker-compose.yml
examples/with-ssl/: .env.example  default.conf  docker-compose.yml
examples/without-ssl/: .env.example  default.conf  docker-compose.yml
scripts/: install-coolify.sh  install.sh  uninstall.sh  upgrade.sh
src/: Dockerfile  pyproject.toml
src/bot/: __init__.py  __main__.py  i18n.py  logger.py  settings.py
src/bot/cogs/: __init__.py  match.py  utils.py
src/bot/events/: events.py  listener.py
